<resources>
    <string name="app_name">Akses BLK Samarinda</string>
    <string name="pelatihan">Form Pelatihan</string>
    <string name="greeting">Hi, %s :)</string>
    <string name="nama_provinsi">Pilih Provinsi</string>
    <string-array name="provinsi">
        <item>Aceh</item>
        <item>Bali</item>
        <item>Bangka Belitung</item>
        <item>Banten</item>
        <item>Bengkulu</item>
        <item>DI Yogyakarta</item>
        <item>DKI Jakarta</item>
        <item>Gorontalo</item>
        <item>Jambi</item>
        <item>Jawa Barat</item>
        <item>Jawa Tengah</item>
        <item>Jawa Timur</item>
        <item>Kalimantan Barat</item>
        <item>Kalimantan Selatan</item>
        <item>Kalimantan Tengah</item>
        <item>Kalimantan Timur</item>
        <item>Kalimantan Utara</item>
        <item>Kepulauan Riau</item>
        <item>Lampung</item>
        <item>Maluku </item>
        <item>Maluku Utara</item>
        <item>Nusa Tenggara Timur</item>
        <item>Nusa Tenggara Barat</item>
        <item>Papua</item>
        <item>Papua Barat</item>
        <item>Riau</item>
        <item>Sulawesi Barat</item>
        <item>Sulawesi Selatan</item>
        <item>Sulawesi Tengah</item>
        <item>Sulawesi Tenggara</item>
        <item>Sulawesi Utara</item>
        <item>Sumatera Barat</item>
        <item>Sumatera Selatan</item>
        <item>Sumatera Utara</item>
    </string-array>
    <string name="nama_agama">Pilih Agama</string>
    <string-array name="agama">
        <item>Islam</item>
        <item>Budha</item>
        <item>Hindu</item>
        <item>Kristen</item>
        <item>Katolik</item>
    </string-array>
    <string name="nama_status">Pilih Status Perkawinan</string>
    <string-array name="status_perkawinan">
        <item>Belum Kawin</item>
        <item>Sudah Kawin</item>
    </string-array>
    <string name="nama_kabupaten">Pilih Kabupaten</string>
    <string-array name="kabupaten">
        <item>Kab. Bontang</item>
        <item>Kab. Samarinda</item>
        <item>Kab. Balikpapan</item>
        <item>Kab. Kutai Timur</item>
        <item>Kab. Penajam</item>
    </string-array>
    <string name="nama_pendidikan">Pilih Pendidikan</string>
    <string-array name="pendidikan">
        <item>SD</item>
        <item>SMP</item>
        <item>SMA</item>
        <item>SMK</item>
        <item>D3</item>
        <item>S1</item>
    </string-array>
    <string name="nama_perusahaan">Pilih Perusahaan</string>
    <string-array name="perusahaan">
        <item>Bank Sahabat Sampoerna</item>
        <item>PT. Aneka Roda Kencana</item>
        <item>PT. Bank Danamon Indonesia, Tbk</item>
        <item>PT. BCA</item>
        <item>PT. Equalindo Makmur Alam Sejahtera</item>
        <item>PT. Equityworld Futures</item>
        <item>PT. Indomarco Prismatama</item>
        <item>PT. Karya Putra Surya Gemilang</item>
        <item>PT. Midi Utama Indonesia</item>
        <item>CV. PESANGBUNGKUS</item>
        <item>PT. Panen Lestari Internusa/Sogo Dept Store</item>
        <item>PT. Paragon Technology And Innovation</item>
        <item>PT. Paula Jaya</item>
        <item>PT. Pharos Group Indonesia</item>
        <item>PT. Raya Indo Makmur</item>
        <item>PT. Sanggar Sarana Baja</item>
        <item>PT. Salim Surya Phone</item>
        <item>PT. Surganya Motor Indonesia</item>
        <item>PT. Surya Hutani Jaya</item>
        <item>PT. Tirta Mahakam Jaya</item>
        <item>PT. Tata Optima Property</item>
        <item>CV. Rizky Patria</item>
        <item>PT. Bukit Intan Indoperkasa</item>
        <item>PT. BFI Finance Indonesia</item>
        <item>PT. CARSURIN</item>
        <item>PT. Bina Sarana Sukses</item>
        <item>PT. BTPN Syariah</item>
        <item>PT. Surya Mustika Nusantara</item>
        <item>PT. Dian Kencana Puri Prima(Indosat Ooredoo)</item>
        <item>PT. Surya Madistrindo</item>
        <item>PT. Asuransi Jiwa Sequislife</item>
        <item>PT. Laut Timur Ardiprima</item>
        <item>PT. Kawan Lama Retail</item>
        <item>PT. Segar Harum Kalimantan</item>
        <item>PT. SLJ Global, Tbk</item>
        <item>PT. Telkom Samarinda</item>
        <item>PT. Infomedia Solusi Humanika</item>
        <item>PT. Axa Finansial Indonesia</item>
    </string-array>
    <string-array name="bank_sahabat">
        <item>Account Officer</item>
    </string-array>
    <string-array name="pt_aneka">
        <item>Marketing</item>
        <item>Driver</item>
        <item>Office Boy</item>
        <item>HRD</item>
    </string-array>
    <string-array name="pt_bank_danamon">
        <item>Marketing Lending</item>
        <item>Marketing Funding</item>
    </string-array>
    <string-array name="pt_bca">
        <item>Customer Service</item>
        <item>Teller</item>
    </string-array>
    <string-array name="pt_equalindo">
        <item>Drafter</item>
        <item>Civil Surveyor</item>
        <item>HSE Supervisor</item>
        <item>HRGA Site</item>
    </string-array>
    <string-array name="pt_equityworld">
        <item>Business Consultant</item>
        <item>WPB(Wakil Pialang Berjangka)</item>
        <item>Assistant Manager</item>
        <item>Administration Business</item>
    </string-array>
    <string-array name="pt_indomarco">
        <item>Merchandiser</item>
        <item>Pemegang Shift</item>
        <item>Driver/Sopir</item>
        <item>Staff Office</item>
        <item>Staff Operation</item>
        <item>Assistent Apoteker</item>
        <item>Pramuniaga</item>
        <item>Kasir</item>
    </string-array>
    <string-array name="pt_karya">
        <item>Bancassurance Area Manager</item>
        <item>Insurance Consultant Priority Banking</item>
        <item>Insurance Consultant Regular Banking</item>
        <item>Sales Mikro</item>
        <item>Administrasi Kredit</item>
        <item>Teller Administrasi</item>
        <item>Sales Konsumer</item>
        <item>Sales Dana dan Jasa</item>
        <item>IT Support</item>
        <item>Administrasi KUR</item>
    </string-array>
    <string-array name="pt_midi">
        <item>Pramuniaga/Kasir</item>
        <item>Sales Canvaser</item>
        <item>Finance Staff</item>
        <item>General Affair Staff</item>
        <item>Buyer</item>
        <item>Surveyor</item>
        <item>Inventory Control</item>
        <item>Maintenance</item>
        <item>Kepala Toko</item>
    </string-array>
    <string-array name="pt_hkgroup">
        <item>Kurir</item>
    </string-array>
    <string-array name="pt_panen">
        <item>Supervisor Area</item>
        <item>Manager Area</item>
        <item>Sales Staff</item>
    </string-array>
    <string-array name="pt_paragon">
        <item>Sales Representative</item>
        <item>Field Account Receiver(Kolektor)</item>
        <item>Driver</item>
        <item>Beauty Advisor(Wardah Cosmetics)</item>
        <item>Make Over Consultant</item>
        <item>Promotion Officer</item>
        <item>Customer Development Officer</item>
    </string-array>
    <string-array name="pt_paula">
        <item>Project Manager</item>
        <item>Site Manager</item>
        <item>Site Engineer</item>
        <item>Pelaksana</item>
        <item>Logistik Project</item>
        <item>Surveyor</item>
        <item>Admin Project</item>
        <item>Operator Motor Greader</item>
        <item>Operator Excavator</item>
        <item>Operator Dozer</item>
        <item>Operator Vibro Roller</item>
        <item>Operator Compect</item>
        <item>Driver Dump Truck</item>
        <item>Driver Mixer</item>
        <item>Driver Triton</item>
    </string-array>
    <string-array name="pt_pharos">
        <item>Animator</item>
        <item>Graphic Designer</item>
        <item>Programmer</item>
        <item>Video Editor</item>
        <item>Techinical Support</item>
        <item>Apoteker</item>
        <item>Asisten Apoteker</item>
        <item>Quality Control Staff</item>
        <item>Quality Assurance Staff</item>
        <item>Quality Control Supervisor/Manager</item>
        <item>Quality Assurance Supervisor/Manager</item>
        <item>Key Account Sales Manager</item>
        <item>Store Supervisor/Manager</item>
        <item>Health Advisor/Beauty Advisor</item>
        <item>Area Sales Manager</item>
        <item>Marketing Supervisor</item>
        <item>Sales Representative</item>
        <item>Sales Promotion Girl/Officer</item>
        <item>Staff Farmasi</item>
        <item>Admin Operational</item>
    </string-array>
    <string-array name="pt_raya">
        <item>Relationship Manager</item>
        <item>Business Manager</item>
    </string-array>
    <string-array name="pt_sanggar">
        <item>Welder</item>
        <item>Setter</item>
        <item>Manchinist</item>
    </string-array>
    <string-array name="pt_salim">
        <item>Frontliner</item>
        <item>Admin Toko</item>
        <item>Kasir Toko</item>
        <item>Supervisor</item>
        <item>Team Setting</item>
    </string-array>
    <string-array name="pt_surganya">
        <item>Kepala Toko</item>
        <item>Mekanik</item>
    </string-array>
    <string-array name="pt_surya">
        <item>Pengawas Harvesting</item>
        <item>Pengawas Plantation</item>
        <item>Koordinator Plantation</item>
        <item>Community Development/Conflict Resolution</item>
        <item>Petugas Tata Usaha Kayu</item>
        <item>Fire Marshall</item>
        <item>Heavy Equipment Section Head</item>
        <item>Pengawas Infrastructure/Road</item>
        <item>Technology Transfer Specialist</item>
        <item>People Development Officer</item>
        <item>Mapping Officer</item>
    </string-array>
    <string-array name="pt_tirta">
        <item>MT Foreman Produksi</item>
        <item>MT Teknisi Mesin Produksi</item>
        <item>MT Teknisi Elektri</item>
        <item>MT Laboratorium Produksi</item>
    </string-array>
    <string-array name="pt_tata">
        <item>Marketing SPV/Staff</item>
        <item>IT SPV</item>
        <item>HVAC SPV(Pendingin dan Tata Udara</item>
    </string-array>
    <string-array name="pt_rizky">
        <item>Teknisi Lapangan</item>
        <item>Teknisi Kelistrikan</item>
        <item>Teknisi Jaringan</item>
    </string-array>
    <string-array name="pt_bukit">
        <item>Foreman Produksi</item>
        <item>Mekanik A2B</item>
        <item>Electric A2B</item>
        <item>Departemen HD</item>
        <item>Mekanik dan Elt DT/HD</item>
    </string-array>
    <string-array name="pt_bfi">
        <item>Administrasi</item>
        <item>Marketing/Telemarketing</item>
        <item>Collector</item>
        <item>IT Wilayah</item>
        <item>Management Trainee</item>
    </string-array>
    <string-array name="pt_carsurin">
        <item>Site Coordinator</item>
        <item>Sampler Supervisor</item>
        <item>Preparator Supervisor</item>
    </string-array>
    <string-array name="pt_bina">
        <item>Kabag Produksi</item>
        <item>Supervisor Produksi</item>
        <item>Foreman Produksi</item>
        <item>Safety Patroll</item>
        <item>Safety Officer</item>
        <item>Operator Excavator</item>
        <item>Operator Dozer</item>
        <item>Operator HD</item>
        <item>Operator Greader</item>
        <item>Operator Compact</item>
        <item>Driver DT Roda 12</item>
        <item>Driver Fuel Truck</item>
        <item>Supervisor HRD</item>
        <item>Staff HRD</item>
        <item>Supervisor Trainer Operator</item>
        <item>Trainer Operator</item>
        <item>Trainer Mekanik</item>
        <item>Warehouse Officer</item>
        <item>Storeman</item>
        <item>Foreman Mekanik</item>
        <item>Mekanik A2B</item>
        <item>Mekanik DT</item>
        <item>Junior Planer</item>
        <item>Administrasi</item>
    </string-array>
    <string name="nama_sub_kejuruan">Pilih Sub Kejuruan</string>
</resources>