<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="ID" />-->

        <!--<EditText-->
        <!--android:id="@+id/txt_id"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content">-->

        <!--<requestFocus/>-->
        <!--</EditText>-->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:typeface="serif"
            android:layout_marginTop="12dp"
            android:text="KEJURUAN DAN PROGRAM"
            android:textSize="16dp"
            android:background="@color/colorPrimaryDark"
            android:textColor="#fff"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:paddingBottom="5dp"
            android:text="Kejuruan"
            android:textSize="12sp" />


        <Spinner
            android:id="@+id/spnKejuruan"
            style="@android:style/Widget.Holo.Light.Spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:entries="@array/jurusan"/>

        <!--<EditText-->
        <!--android:id="@+id/txt_kejuruan"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content" />-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:paddingBottom="5dp"
            android:text="Sub Kejuruan"
            android:textSize="12sp" />

        <Spinner
            android:id="@+id/spnSubKejuruan"
            style="@android:style/Widget.Holo.Light.Spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:prompt="@string/nama_sub_kejuruan" />

        <!--<EditText-->
        <!--android:id="@+id/txt_sub_kejuruan"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content" />-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:paddingBottom="5dp"
            android:text="Program"

            android:textSize="12sp" />

        <Spinner
            android:id="@+id/spnProgram"
            style="@android:style/Widget.Holo.Light.Spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary" />

       <!--<View-->
           <!--android:layout_marginTop="12dp"-->
           <!--android:layout_width="match_parent"-->
           <!--android:background="#000000"-->
           <!--android:layout_height="30dp"-->
           <!--&gt;-->
       <!--</View>-->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:typeface="serif"
            android:layout_marginTop="12dp"
            android:text="DATA PRIBADI"
            android:textSize="16dp"
            android:background="@color/colorPrimaryDark"
            android:textColor="#fff"/>



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:layout_marginTop="12dp"
            android:text="Nama Lengkap"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/txt_nama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_edit_text"
            android:ems="5"
            android:textSize="14sp">

            <requestFocus />
        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="* Nama Harus Sesuai dengan Ijazah Terakhir \n Jika Tidak Maka Pendaftaran Tidak akan diproses"
            android:textSize="10sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="Jenis Kelamin"
            android:textSize="12sp" />

        <RadioGroup
            android:id="@+id/radioSex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radioMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorPrimary"
                android:checked="true"
                android:text="Laki-Laki"
                android:textSize="13sp" />

            <RadioButton
                android:id="@+id/radioFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorPrimary"
                android:text="Perempuan"
                android:textSize="13sp" />

        </RadioGroup>
        <!--<EditText-->
        <!--android:id="@+id/txt_jk"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content" />-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:paddingBottom="5dp"
            android:text="Tempat, Tanggal Lahir"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/txt_ttl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_edit_text"
            android:ems="5"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:paddingBottom="5dp"
            android:text="Alamat"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/txt_alamat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_edit_text"
            android:ems="5"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:paddingBottom="5dp"
            android:text="Provinsi"
            android:textSize="12sp" />

        <Spinner
            android:id="@+id/spnProvinsi"
            style="@android:style/Widget.Holo.Light.Spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:entries="@array/provinsi"
            android:prompt="@string/nama_provinsi" />

        <!--<EditText-->
        <!--android:id="@+id/txt_provinsi"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content" />-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:paddingBottom="5dp"
            android:text="Kabupaten/Kota"
            android:textSize="12sp" />

        <Spinner
            android:id="@+id/spnKabupaten"
            style="@android:style/Widget.Holo.Light.Spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:prompt="@string/nama_kabupaten"
            android:entries="@array/prov_aceh"/>

        <!--<EditText-->
        <!--android:id="@+id/txt_kab_kota"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content" />-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:paddingBottom="5dp"
            android:text="No Telp"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/txt_notelp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_edit_text"
            android:ems="5"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:paddingBottom="5dp"
            android:text="Email"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/txt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_edit_text"
            android:ems="5"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:paddingBottom="5dp"
            android:text="Agama"
            android:textSize="12sp" />

        <Spinner
            android:id="@+id/spnAgama"
            style="@android:style/Widget.Holo.Light.Spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:prompt="@string/nama_agama" />

        <!--<EditText-->
        <!--android:id="@+id/txt_agama"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content" />-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:paddingBottom="5dp"
            android:text="Pendidikan"
            android:textSize="12sp" />

        <Spinner
            android:id="@+id/spnPendidikan"
            style="@android:style/Widget.Holo.Light.Spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:prompt="@string/nama_pendidikan" />

        <!--<EditText-->
        <!--android:id="@+id/txt_pendidikan"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content" />-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:paddingBottom="5dp"
            android:text="Jurusan"
            android:textSize="12sp" />

        <!--<Spinner-->
            <!--android:id="@+id/spnJurusan"-->
            <!--style="@android:style/Widget.Holo.Light.Spinner"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:backgroundTint="@color/colorPrimary"-->
            <!--android:prompt="@string/nama_jurusan" />-->

        <EditText
            android:id="@+id/txt_jurusan"
            android:background="@drawable/custom_edit_text"
            android:ems="5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:paddingBottom="5dp"
            android:text="Asal Sekolah"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/txt_asal_sekolah"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_edit_text"
            android:ems="5"
            android:textSize="14sp" />




        <!--<EditText-->
        <!--android:id="@+id/txt_program"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content" />-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:paddingBottom="5dp"
            android:text="Photo"
            android:textSize="12sp" />


            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Path" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=": " />

                <TextView
                    android:id="@+id/textViewPath"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Path Photo" />


            </TableRow>

            <Button
                android:id="@+id/buttonPilihFile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/colorPrimaryDark"
                android:text="Browse File Photo" />

        <!--<EditText-->
            <!--android:id="@+id/txt_url_photo"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:background="@drawable/custom_edit_text"-->
            <!--android:ems="5"-->
            <!--android:hint="Path Photo"-->
            <!--android:textSize="12sp" />-->

        <Button
            android:id="@+id/buttonUpload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/colorPrimary"
            android:onClick="btnRegister_Click"
            android:text="Kirim"
            android:textAllCaps="true" />

    </LinearLayout>
</ScrollView>